Fixed Ozcam CSS bug where advanced search was cut off by footer
git-svn-id: http://ala-hubs.googlecode.com/svn/branches/bio_hubs_webapp@325 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/ozcam-0.3/style.css
+++ b/src/main/webapp/css/ozcam-0.3/style.css
@@ -463,7 +463,7 @@ h1, h2, h3, h4, h5, h6, #content2 h1, #content2 h2, #content2 h3, #content2 h4, 
 
 /*---- ALA changes ----*/
 #contentBox > #headingBar {
-    height: 55px;
+    min-height: 55px;
 }
 
 #contentBox > #headingBar > h1 {
